# imap-webhook

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.json  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml
imap_gotify/: app.py  config.py  gotify.py  login_test.py  mail_markdown.py  state.py  watcher.py  web.py  webhook_test.py
tests/: test_config.py  test_folder_list.py  test_mail_markdown.py
