[project]
name = "imap-gotify"
version = "0.1.0"
description = "Watch multiple IMAP mailboxes and forward new mail to Gotify as Markdown."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.9",
    "markdownify>=1.2",
]

[project.scripts]
imap-gotify = "imap_gotify.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
